reservation-web/deployment/k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: caj-web
  labels:
    app: caj-web
    service: caj-web
spec:
  selector:
    app: caj-web
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
